[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Christian Aguilar <christian.aguilar@ni.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
grpcio = "^1.49.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "1.49.1"
mypy = ">=1.0"
mypy-protobuf = "^3.6.0"
types-protobuf = "5.28.3.20241203"
grpc-stubs = "^1.53"
black = ">=23.3.0"