[tool.poetry]
name = "ni-grpc-device-examples"
version = "1.8.2"
description = ""
authors = ["Christian Aguilar <christian.aguilar@ni.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
grpcio = "^1.78.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.78.1"
mypy = "^1.19.1"
mypy-protobuf = "^5.0.0"
types-protobuf = "^6.32.1.20260221"
types-grpcio = "^1.0.0.20251009"
black = "^26.1.0"

[[tool.mypy.overrides]]
# nifpga has a field named "property" which shadows the built-in "@property" decorator.
module = ["nifpga_pb2"]
disable_error_code = "operator"
