[tool.poetry]
name = "ni-grpc-device-examples"
version = "1.8.2"
description = ""
authors = ["Christian Aguilar <christian.aguilar@ni.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
grpcio = "^1.49.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "1.49.1"
mypy = ">=1.0"
mypy-protobuf = "3.6.0"
types-protobuf = ">=5.28.3.20241203"
types-grpcio = ">=1.0"
black = ">=23.3.0"
setuptools = "^80.9.0"

[[tool.mypy.overrides]]
# nifpga has a field named "property" which shadows the built-in "@property" decorator.
module = ["nifpga_pb2"]
disable_error_code = "operator"